syntax = "proto3";
option java_package = "VireProtobuf.vire.cms";
option java_outer_classname = "ConnectionFailureStub";
package vire.cmslapp;

import "vire/utility/BasePayload.proto";
import "vire/utility/ModelIdentifier.proto";
import "google/protobuf/any.proto";

message ConnectionFailure {

  vire.utility.BasePayload _base = 1; // Base class

  vire.utility.ModelIdentifier error_type_id = 100; // The error type identifier
  google.protobuf.Any          error         = 101; // The error object

}
