syntax = "proto3";
option java_package = "VireProtobuf.vire.utility";
option java_outer_classname = "InvalidContextErrorStub";
package vire.utility;

import "vire/utility/BaseError.proto";

message InvalidContextError {

  BaseError _base = 1;

}